k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-prueba-k8s
  labels:
    app: prueba-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prueba-pod-k8s
  template:
    metadata:
      labels:
        app: prueba-pod-k8s
    spec:  
      containers:
      - image: mmarnun/prueba_k8s:v2
        name: contenedor-prueba-k8s
        ports:
        - name: pruebak8s
          containerPort: 5002
