k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pruebak8s
spec:
  type: NodePort
  ports:
  - name: service-http
    port: 80
    targetPort: pruebak8s
  selector:
    app: prueba-pod-k8s
